Transfor return user in array
